# LabWork2

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  build.bat  dev.bat  generate_docs.bat  run_tests.bat  simple_build.bat
.github/workflows/: CI.yml  ci.yml
docs/architecture/: class_diagram.md  component_diagram.md  requirements.md  system_description.md  test_plan.md
docs/doxygen/: Doxyfile.in
include/: accessory_card.h  ai_player.h  armor_card.h  bazaar.h  buff_effect.h  card.h  card_factory.h  card_heroes_precompiled.h  character_card.h  debuff_effect.h  duel_mode.h  duelmmode.h  duelmode.h  effect.h  game_mode.h  human_player.h  item_card.h  magic_card.h  meditatiomode.h  meditation_mode.h  meditationmode.h  player.h  spell_card.h  status_effect.h  training_mode.h  trainingmode.h  tutorial.h  weapon_card.h
src/: accessory_card.cpp  ai_player.cpp  armor_card.cpp  bazaar.cpp  buff_effect.cpp  card.cpp  card_factory.cpp  character_card.cpp  debuff_effect.cpp  duelmode.cpp  effect.cpp  game_mode.cpp  human_player.cpp  item_card.cpp  magic_card.cpp  main.cpp  meditationmode.cpp  player.cpp  spell_card.cpp  status_effect.cpp  training_mode.cpp  trainingmode.cpp  tutorial.cpp  weapon_card.cpp
tests/: card_test.cpp  effect_test.cpp  game_mode_test.cpp  player_test.cpp  tests.cpp
